--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-    Theme Name: NewBiz
-    Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
-    Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 </head>
@@ -71,7 +68,8 @@
       <div class="intro-info">
         <h2 style="font-size: 30px;">SEED<span style="font-weight: 400">CODE</h2>
         <h2 class="">The All-Encompassing Solution For Your Software Development</h2>
-        <p class="">Build your startup — get funding for your software development, recruit a team overseas, and
+        <p class="">Build your startup — get equity financing for your software development, recruit a team overseas,
+          and
           build a product, service, & experience
           customers love.</p>
         <div class="">
@@ -89,7 +87,7 @@
   <main id="main">
 
     <div class="container-fluid">
-      <img src="img/collab.jpg" alt="In Collaboration With Logos" class="img-fluid wow fadeIn collab-img">
+      <img src="img/collab.jpg" alt="In Collaboration With Logos" class="img-fluid collab-img">
     </div>
 
     <!--==========================
@@ -130,29 +128,29 @@
 
           </div>
 
-          <div class="col-lg-6 background order-lg-2 order-1 wow fadeIn px-5">
+          <div class="col-lg-6 background order-lg-2 order-1 px-5">
             <img src="img/about-img.jpg" class="img-fluid" alt="">
           </div>
         </div>
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">274</span>
+            <span data-toggle="counter-up">31</span>
             <p>Clients</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">421</span>
+            <span data-toggle="counter-up">45</span>
             <p>Projects</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,364</span>
+            <span data-toggle="counter-up">364</span>
             <p>Hours Of Support</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">21</span>
+            <span data-toggle="counter-up">28</span>
             <p>Engineers</p>
           </div>
 
@@ -173,7 +171,7 @@
         <header class="section-header">
           <h3 class="">Portfolio</h3>
         </header>
-        <h4 class="h4"> Our Latest Project</h4>
+        <h4 class="h4"> Our Latest Work</h4>
         <p class="portfolio-highlight">
           We developed a singular application for Samba Bank customers and non-customers alike, with an array of
           features designed to
@@ -205,26 +203,7 @@
         </div>
 
 
-        <div class="row portfolio-container" style="min-height: 100vh;">
-
-
-
-
-
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/app3.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>App 3</span> <a href="img/portfolio/app3.jpeg" class="link-preview" data-lightbox="portfolio"
-                    data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. </p>
-
-              </div>
-            </div>
-          </div> -->
+        <div class="row portfolio-container" style="">
 
           <!--Samba Bank -->
           <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
@@ -414,28 +393,108 @@
 
           </div>
 
-
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>App 2</span> <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="App 2" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat.</p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                  labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. </p>
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
+          <!--Chat Bot -->
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.3s">
+            <a class="" data-toggle="modal" data-target="#chat">
+              <div class="portfolio-wrap">
+                <img src="img/portfolio/chat/title.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <span>Cognitive Chat Bot</span>
+                  <p> </p>
                 </div>
               </div>
+            </a>
+          </div>
+          <div class="modal fade" id="chat" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <div class=" align-items-center">
+                    <div id="chatControls" class=" carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/portfolio/chat/title.jpg" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-foot">
+                  <div class="foot-header">
+                    <h4>Cognitive Chat Bot</h4>
+                    <div>
+                      <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
+                    </div>
+                  </div>
+                  <p></p>
+                  <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
+                      class="fas fa-laptop-code"></i></i></a>
+                </div>
+
+              </div>
             </div>
-          </div> -->
+
+          </div>
+
+          <!--NBP -->
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
+            <a class="" data-toggle="modal" data-target="#nbp">
+              <div class="portfolio-wrap">
+                <img src="img/portfolio/nbp/title.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <span>National Bank of Pakistan</span>
+                  <p> </p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="modal fade" id="nbp" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <div class=" align-items-center">
+                    <div id="nbpControls" class=" carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/portfolio/nbp/title.jpg" class="d-block w-100" alt="...">
+                        </div>
+
+                        <div class="carousel-item">
+                          <img src="img/portfolio/nbp/sup1.jpg" class="d-block w-100" alt="...">
+                        </div>
+
+                      </div>
+                      <a class="carousel-control-prev carousel-vid" href="#nbpControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next carousel-vid" href="#nbpControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-foot">
+                  <div class="foot-header">
+                    <h4>National Bank of Pakistan</h4>
+                    <div>
+                      <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
+                    </div>
+                  </div>
+                  <p> </p>
+                  <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
+                      class="fas fa-laptop-code"></i></i></a>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+
+
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
         <div class="portfolio-wrap">
@@ -460,41 +519,7 @@
         </div>
       </div> -->
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. </p>
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
 
-              </div>
-            </div>
-          </div> -->
-
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/app4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>App 4</span> <a href="img/portfolio/app4.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="App 4" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. </p>
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
-
-              </div>
-            </div>
-          </div> -->
 
         </div>
 
@@ -507,13 +532,13 @@
     ============================-->
     <section id="team">
       <div class="container">
-        <div class="section-header">
+        <div class="section-header" style="margin-bottom: 60px;">
           <h3>Management Team</h3>
         </div>
 
         <div class="row ">
 
-
+          <!-- Rabeel -->
           <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
               <img src="img/team-1.jpg" class="img-fluid" alt="" data-wow-delay="0.1s">
@@ -541,6 +566,7 @@
             </div>
           </div>
 
+          <!-- Drew -->
           <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
               <img src="img/team-2.jpg" class="img-fluid" alt="">
@@ -568,6 +594,7 @@
             </div>
           </div>
 
+          <!-- Ahmad -->
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.2s">
             <div class="member">
               <img src="img/team-3.jpeg" class="img-fluid" alt="">
@@ -581,8 +608,8 @@
                     B.A. in Computer Science @ UC Berkeley
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    SWE @ Incorta <br />
                     General Partner @ Providus Ventures
+                    General Partner @ Vitality Capital
                   </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/ahmad-jawaid/" target="_blank"><i
@@ -594,17 +621,17 @@
             </div>
           </div>
 
-
+          <!-- Zabi -->
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
             <div class="member">
               <img src="img/team-4.1.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Zabi Mohebzada</h4>
-                  <span>Head of Sales</span>
+                  <span>Chief Commercial Officer </span>
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
-                    B.A. in Biology @ UWO <br />
+                    B.A. in Biological Sciences @ UWO <br />
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
                     General Partner @ Providus Ventures <br />
