portfolio done - for now

--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
                   <p>We developed a singular application for Samba Bank customers and non-customers alike, with an
                     array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
                     Android. </p>
+                  <p>The app features account details, fund transfers, card management, bill payments, friend mangement,
+                    multiple layers
+                    of security, and much more. </p>
                   <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                       class="fas fa-laptop-code"></i></i></a>
                 </div>
@@ -291,7 +294,7 @@
                 <div class="portfolio-info">
                   <span>Luxury Adventures</span>
                   <p>A complete e-commerce platform — easy admin content mangement, integrated email marketing &
-                    blog, SEO, reporting tools & much more. </p>
+                    blog, SEO, analytics tools & much more. </p>
                 </div>
               </div>
             </a>
@@ -348,7 +351,7 @@
                 <img src="img/portfolio/telenor/title.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <span>Telenor</span>
-                  <p> A user-experience focused app to drive consumer relations for Pakistan's Telenor Franchise —
+                  <p> A user-experience focused app to drive customer relationships for Pakistan's Telenor Franchise —
                     account management, geotags, servicing, referalls and more. </p>
                 </div>
               </div>
@@ -400,7 +403,13 @@
                 <img src="img/portfolio/chat/title.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <span>Cognitive Chat Bot</span>
-                  <p> </p>
+                  <p> Our self learning chatbox solution integrates with your CRM and other platforms to deliver an
+                    engaged and personal customer experience. It's conversational maturity and autonmous
+                    reasoning help it perform complex logic without any human intervention.</p>
+                  <p> Capable of
+                    simultaneously sustaining thousands of these conversations, it will dramatically
+                    lighten the load
+                    on your sales and service teams. </p>
                 </div>
               </div>
             </a>
@@ -427,7 +436,13 @@
                       <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
                     </div>
                   </div>
-                  <p></p>
+                  <p> Our self learning chatbox solution integrates with your CRM and other platforms to deliver an
+                    engaged and personal customer experience. It's conversational maturity and autonmous
+                    reasoning help it perform complex logic without any human intervention.</p>
+                  <p> Capable of
+                    simultaneously sustaining thousands of these conversations, it will dramatically
+                    lighten the load
+                    on your sales and service teams. </p>
                   <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                       class="fas fa-laptop-code"></i></i></a>
                 </div>
@@ -444,7 +459,8 @@
                 <img src="img/portfolio/nbp/title.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <span>National Bank of Pakistan</span>
-                  <p> </p>
+                  <p> An IOT Based Solution to remotely monitor, track & optimize the availability of ATM services for
+                    increased Customer Satisfaction.</p>
                 </div>
               </div>
             </a>
@@ -483,7 +499,12 @@
                       <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
                     </div>
                   </div>
-                  <p> </p>
+                  <p> An IOT Based Solution to remotely monitor, track & optimize the availability of ATM services for
+                    increased Customer Satisfaction.</p>
+                  <p> The app features real-time monitoring, outage notifications, audit reports, remote control and
+                    optimized issue identification. Throughput resulted in PKR 250,000 (USD 1,600) in direct savings per
+                    month, per site.
+                  </p>
                   <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                       class="fas fa-laptop-code"></i></i></a>
                 </div>
@@ -608,7 +629,7 @@
                     B.A. in Computer Science @ UC Berkeley
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    General Partner @ Providus Ventures
+                    General Partner @ Providus Ventures<br />
                     General Partner @ Vitality Capital
                   </p>
                   <div class="social">
