--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container">
 
       <div class="intro-info">
-        <h2 style="font-size: 30px;">SEED<span style="font-weight: 400">CODE</h2>
+        <h2 class="nd-mb" style="font-size: 30px;">SEED<span style="font-weight: 400">CODE</h2>
         <h2 class="">The All-Encompassing Solution For Your Software Development</h2>
         <p class="">Build your startup — get equity financing for your software development, recruit a team overseas,
           and
