--- a/index.html
+++ b/index.html
@@ -86,8 +86,22 @@
 
   <main id="main">
 
-    <div class="container-fluid">
-      <img src="img/collab.jpg" alt="In Collaboration With Logos" class="img-fluid collab-img">
+    <div class="container-fluid collab">
+      <h6 class="collab-header">In Collaboration With</h6>
+      <div class="row">
+        <div class="col-lg-3 col-6">
+          <img src="img/collab/collab-3.jpg" class="img-fluid mb-4 img-pad-1">
+        </div>
+        <div class="col-lg-3 col-6">
+          <img src="img/collab/collab-1.jpg" class="img-fluid mb-4 img-pad-2">
+        </div>
+        <div class="col-lg-3 col-6">
+          <img src="img/collab/collab-4.jpg" class="img-fluid mb-4 img-pad-1">
+        </div>
+        <div class="col-lg-3 col-6">
+          <img src="img/collab/collab-2.jpg" class="img-fluid mb-4 img-pad-1">
+        </div>
+      </div>
     </div>
 
     <!--==========================
@@ -104,7 +118,8 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              Digital information technology requires rapid innovation to succeed. SeedCode understands the significance
+              Digital information technology requires rapid innovation to succeed. SeedCode understands the
+              significance
               of remaining current through constant self-reinvention. We continually attract the brightest minds in
               contemporary digital platforms and paradigms, utilizing an elite team of technology professionals across
               each business function. As a top-tier employer, SeedCode values employee ownership, professional
@@ -274,7 +289,8 @@
                   <p>We developed a singular application for Samba Bank customers and non-customers alike, with an
                     array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
                     Android. </p>
-                  <p>The app features account details, fund transfers, card management, bill payments, friend mangement,
+                  <p>The app features account details, fund transfers, card management, bill payments, friend
+                    mangement,
                     multiple layers
                     of security, and much more. </p>
                   <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
@@ -502,7 +518,8 @@
                   <p> An IOT Based Solution to remotely monitor, track & optimize the availability of ATM services for
                     increased Customer Satisfaction.</p>
                   <p> The app features real-time monitoring, outage notifications, audit reports, remote control and
-                    optimized issue identification. Throughput resulted in PKR 250,000 (USD 1,600) in direct savings per
+                    optimized issue identification. Throughput resulted in PKR 250,000 (USD 1,600) in direct savings
+                    per
                     month, per site.
                   </p>
                   <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
