--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
   <main id="main">
 
     <div class="container-fluid collab">
-      <h6 class="collab-header">In Collaboration With</h6>
+      <h6 class="collab-header wow fadeIn">In Collaboration With</h6>
       <div class="row">
-        <div class="col-lg-3 col-6">
+        <div class="col-lg-3 col-6 wow fadeIn">
           <img src="img/collab/collab-3.jpg" class="img-fluid mb-4 img-pad-1">
         </div>
-        <div class="col-lg-3 col-6">
+        <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.1s">
           <img src="img/collab/collab-1.jpg" class="img-fluid mb-4 img-pad-2">
         </div>
-        <div class="col-lg-3 col-6">
+        <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.2s">
           <img src="img/collab/collab-4.jpg" class="img-fluid mb-4 img-pad-1">
         </div>
-        <div class="col-lg-3 col-6">
+        <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.3s">
           <img src="img/collab/collab-2.jpg" class="img-fluid mb-4 img-pad-1">
         </div>
       </div>
@@ -422,10 +422,6 @@
                   <p> Our self learning chatbox solution integrates with your CRM and other platforms to deliver an
                     engaged and personal customer experience. It's conversational maturity and autonmous
                     reasoning help it perform complex logic without any human intervention.</p>
-                  <p> Capable of
-                    simultaneously sustaining thousands of these conversations, it will dramatically
-                    lighten the load
-                    on your sales and service teams. </p>
                 </div>
               </div>
             </a>
@@ -605,7 +601,7 @@
           </div>
 
           <!-- Drew -->
-          <div class="col-lg-3 col-md-6 wow fadeIn">
+          <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="member">
               <img src="img/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
