new team members

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <header class="section-header">
           <h3 class="">Portfolio</h3>
         </header>
-        <h4 class="h4"> Our Latest Work</h4>
+        <h4 class="h4"> Our Latest Project</h4>
         <p class="portfolio-highlight">
           We developed a singular application for Samba Bank customers and non-customers alike, with an array of
           features designed to
@@ -566,7 +566,7 @@
     <section id="team">
       <div class="container">
         <div class="section-header" style="margin-bottom: 60px;">
-          <h3>Management Team</h3>
+          <h3>Core Team</h3>
         </div>
 
         <div class="row ">
@@ -584,10 +584,6 @@
                     Masters in Systems Engineering @ UPENN <br />
                     B.S.E. in Electrical Engineering @ UPENN <br />
                     B.A. in Physics @ UPENN <br />
-
-
-                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    General Partner @ Providus Ventures and Providus Capital <br />
                   </p>
 
                   <div class="social">
@@ -611,11 +607,7 @@
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     Founder @ BaireGroup <br />
                     Masters in Math @ UPENN <br />
-                    B.S.E in Networks Engineering @ UPENN <br />
-
-
-                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    Founder @ Commonwealth Labs<br />
+                    B.S.E. in Networks Engineering @ UPENN <br />
                   </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i
@@ -634,15 +626,11 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Ahmad Jawaid</h4>
-                  <span>VP, Engineering</span>
+                  <span>Lead Software Engineer</span>
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     SWE Lead @ Tarjimly, Y Combinator W'18 <br />
                     B.A. in Computer Science @ UC Berkeley
-
-                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    General Partner @ Providus Ventures<br />
-                    General Partner @ Vitality Capital
                   </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/ahmad-jawaid/" target="_blank"><i
@@ -654,8 +642,33 @@
             </div>
           </div>
 
-          <!-- Zabi -->
+          <!-- Yameen -->
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
+            <div class="member">
+              <img src="img/anon.jpg" class="img-fluid" alt="" data-wow-delay="0.1s">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Yameen Malik
+
+                  </h4>
+                  <span>Lead Computer Vision & ML Engineer
+                  </span>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    Research Engineer @ Symentec<br />
+                    ML Engineer @ Smartyltics<br />
+                    B.S. in Computer Science @ NUCES-FAST
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/laiqa/" target="_blank"><i
+                          class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Zabi -->
+          <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
               <img src="img/team-4.1.jpeg" class="img-fluid" alt="">
               <div class="member-info">
@@ -666,11 +679,6 @@
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     B.A. in Biological Sciences @ UWO <br />
 
-                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    General Partner @ Providus Ventures <br />
-
-                    <!-- <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    General Partner @ Providus Ventures <br /> General Partner @ Vitality Capital <br /> -->
                   </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/zabi-mohebzada-59008811b/" target="_blank"><i
@@ -680,6 +688,80 @@
               </div>
             </div>
           </div>
+
+          <!-- Laiqa -->
+          <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.1s">
+            <div class="member">
+              <img src="img/team-5.jpg" class="img-fluid" alt="" data-wow-delay="0.1s">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Laiqa Shariff
+                  </h4>
+                  <span>Creative Director
+                  </span>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    B.S. Entrepreneurship & Finance @ Wharton<br />
+                    B.A. English @ UPENN
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/laiqa/" target="_blank"><i
+                          class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Bilal -->
+          <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.2s">
+            <div class="member">
+              <img src="img/team-6.jpg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Bilal Khan</h4>
+                  <span>VP, Strategy & Analytics</span>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    Investment Advisor @ Providus Capital<br />
+                    Investment Analyst @ ASK Investment Management<br />
+                    B.A. in Business Admin. @ SZABIST<br />
+                    Level 3 Cleared @ CFA
+                  </p>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/bilal-khan-804a09a1/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <!-- Moeen -->
+          <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
+            <div class="member">
+              <img src="img/anon.jpg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Moeenuddin Hashim</h4>
+                  <span>Lead Data Analyst</span>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    AVP, Equity Research @ Providus Capital<br />
+                    Analyst @ Al Meezan Investments <br />
+                    Accounting & Finance @ IBA
+                  </p>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/moeenuddinhashim/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
 
 
