Cogintive to AI

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               <div class="portfolio-wrap">
                 <img src="img/portfolio/chat/title.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <span>Cognitive Chat Bot</span>
+                  <span>AI Chat Bot</span>
                   <p> Our self learning chatbox solution integrates with your CRM and other platforms to deliver an
                     engaged and personal customer experience. It's conversational maturity and autonmous
                     reasoning help it perform complex logic without any human intervention.</p>
@@ -445,7 +445,7 @@
                 </div>
                 <div class="modal-foot">
                   <div class="foot-header">
-                    <h4>Cognitive Chat Bot</h4>
+                    <h4>AI Chat Bot</h4>
                     <div>
                       <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
                     </div>
